Переделка в Rtasks-MUI, набросок интерфейса и линейного графика

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="logo512.png">
     <link rel="apple-touch-icon" href="logo192.png"/>
-    <title>Фигуры</title>
+    <title>Rtasks-mui</title>
 </head>
-<body>
+<body style="padding:0; margin: 0; font-family: Arial, sans-serif">
 <noscript>You need to enable JavaScript to run this app. Для запуска приложения необходим JavaScript</noscript>
 <div id="root"></div>
 
